# FastApiWithSqlModel

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
src/: main.py  settings.py
src/database/: engine.py  helpers.py
src/database/migrations/: env.py
src/database/migrations/versions/: 3e22553c3944_first_commit.py
src/models/: __init__.py  heroes.py
tests/: test_main.py
