[tool.poetry]
name = "fastapiproject2"
version = "0.1.0"
description = ""
authors = ["Thibaut Stalin <thibaut.st@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
mypy = "^1.10.0"
ruff = "^0.4.2"
ruff-lsp = "^0.0.53"
pytest = "^8.1.1"
httpx = "^0.27.0"
coverage = "^7.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

exclude = ["src/database/alembic"]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

exclude = ["src\\database\\migrations"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]

ignore = [
    # pydocstyle (D)
    "D100",
    "D104",
    "D203",
    "D212",
    # flake8-bandit (S)
    'S101',
]
